# ASL-live

./: .gitignore  README.md  pyproject.toml  tree.md
.claude/: CLAUDE.md  discussion.md  sub_features.md
.claude/agents/: ml-python-expert.md
.claude/docs/: architecture.md  tech-stack.md
.claude/docs/decisions/: README.md
.claude/docs/features/: feature-1-hand-landmarks.md  feature-10-orchestration.md  feature-2-data-collection.md  feature-3-classifier.md  feature-4-debounce.md  feature-5-translation.md  feature-6-tts.md  feature-7-lcd.md  feature-8-buttons.md  feature-9-language-menu.md
.claude/plans/: PLAN.md  current-task.md  phase_1.md  plan_zip.md
.claude/plans/phases/: phase-1-data-collection.md
scripts/: collect.py  ingest_public.py  setup_models.py
src/asl_live/: __init__.py  config.py
src/asl_live/capture/: collect.py
src/asl_live/recognition/: landmarks.py
tests/: conftest.py  test_landmarks.py
