[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asl-live"
version = "0.1.0"
description = "Offline ASL alphabet -> spoken translation device for Raspberry Pi"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-2.0-or-later" }
authors = [{ name = "Fede" }]
keywords = ["asl", "raspberry-pi", "offline", "accessibility", "sign-language"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

# Base dependencies — needed on both dev PC and Pi.
dependencies = [
    "mediapipe>=0.10",
    "opencv-python>=4.8",
    "numpy>=1.26",
    "onnxruntime>=1.16",
    "argostranslate>=1.9",
    "piper-tts>=1.2",
    "sounddevice>=0.4",
    "pydantic>=2.5",
]

[project.optional-dependencies]
# PC-only: training stack + tests. Not installed on the Pi.
dev = [
    "torch>=2.1",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "pytest>=7.4",
]

# Pi-only: GPIO and I2C peripheral libraries. Not installed on the dev PC.
pi = [
    "RPLCD>=1.3",
    "smbus2>=0.4",
    "gpiozero>=2.0",
]

[project.urls]
Repository = "https://github.com/FreddyZeta1847/ASL-live"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
